Fix spacing bug in firefox

--- a/public/styles.less
+++ b/public/styles.less
@@ -698,7 +698,7 @@ table.commitsList, table.authorList {
   }
 
   #commitSummary {
-    margin: 40px auto;
+    margin: 0px auto 40px auto;
     width: @pageWidth;
 
     #filesChanged {
